<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.anyrtc.live_line.PreStartLiveActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                <EditText
                    android:id="@+id/edit_live_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_live_topic"
                    android:maxLines="1"
                    android:singleLine="true" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbtn_video_hd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_video_hd"/>
                <RadioButton
                    android:id="@+id/rbtn_video_qhd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_video_qhd"/>
                <RadioButton
                    android:id="@+id/rbtn_video_sd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/str_video_sd"/>
                <RadioButton
                    android:id="@+id/rbtn_video_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_video_low"/>
            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbtn_live_landscape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_live_landscape"/>
                <RadioButton
                    android:id="@+id/rbtn_live_portrait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_live_portrait"
                    android:checked="true"/>
            </RadioGroup>

            <Button
                android:id="@+id/btn_video_start"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_start_video_live"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btn_video_audio_start"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_start_video_live_audio_line"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btn_audio_start"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_start_audio_live"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
