<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_rtmpc_videos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></RelativeLayout>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="left"
        android:text="@string/main_title"
        android:textColor="@color/item_white"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textAppearance="@android:style/TextAppearance.Large"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:gravity="right">
        <Button
            android:id="@+id/btn_copy_hls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_live_share"
            android:onClick="OnBtnClicked"/>
        <Button
            android:id="@+id/btn_switch_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_switch_camera"
            android:onClick="OnBtnClicked"/>
        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_live_close"
            android:onClick="OnBtnClicked"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical"
        android:gravity="left"
        android:padding="10dp">
        <TextView
            android:id="@+id/txt_connection_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:background="@android:color/transparent"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/txt_rtc_connection_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:background="@android:color/transparent"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/txt_rtmp_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:background="@android:color/transparent"
            android:padding="5dp"/>
    </LinearLayout>
</RelativeLayout>
