<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.anyrtc.live_line.MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/main_title"
        android:padding="15dp"
        android:textAppearance="@android:style/TextAppearance.Large"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title"
        android:layout_marginTop="15dp"
        android:src="@drawable/icon_photo"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txt_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:gravity="center"
        android:padding="10dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/layout_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/txt_nickname">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="none" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/btn_start_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_start_live"
        android:onClick="OnBtnClicked"
        android:layout_above="@+id/txt_version"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/str_version"
        android:padding="5dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
</RelativeLayout>
