<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <RelativeLayout
        android:id="@+id/rl_rtmpc_videos"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/rc_audio_chat"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:stackFromBottom="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_audio_living"
            android:textColor="@android:color/holo_blue_dark"
            android:textAppearance="@android:style/TextAppearance.Large" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/main_title"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/item_white" />

        <LinearLayout
            android:id="@+id/llayout_host_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="right">

            <Button
                android:id="@+id/btn_copy_hls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnBtnClicked"
                android:text="@string/str_live_share" />

            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnBtnClicked"
                android:text="@string/str_live_close" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/llayout_host_tools"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_rtmp_connection_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/txt_rtc_connection_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/txt_rtmp_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/txt_watcher_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:id="@+id/space_chat_list_right"
            android:layout_width="72dp"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="56.0dip"
            android:layout_marginLeft="4.0dip"
            android:background="#FFB5C5" />

        <FrameLayout
            android:id="@+id/fl_chat_list"
            android:layout_width="fill_parent"
            android:layout_height="300.0dip"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="56.0dip"
            android:layout_marginLeft="4.0dip"
            android:layout_toLeftOf="@id/space_chat_list_right"
            android:gravity="bottom">

            <include layout="@layout/layout_live_chat_list" />
        </FrameLayout>

        <ViewAnimator
            android:id="@+id/va_bottom_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="6.0dip">

            <ViewAnimator
                android:id="@+id/va_controls"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:measureAllChildren="false"
                android:padding="5.0dip">


                <org.anyrtc.widgets.BottomControl

                    android:id="@+id/ll_host_audience_controls"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:baselineAligned="false"
                    android:gravity="bottom"
                    android:paddingBottom="5.0dip">


                    <ImageView
                        android:id="@+id/iv_host_text"
                        style="@style/style_live_ibtn_controls"
                        android:onClick="OnBtnClicked"
                        android:src="@drawable/selector_btn_chat" />


                </org.anyrtc.widgets.BottomControl>

            </ViewAnimator>

            <include layout="@layout/layout_live_input" />

        </ViewAnimator>
    </RelativeLayout>


</RelativeLayout>
