<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <RelativeLayout
        android:id="@+id/rl_rtmpc_videos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">

        <ListView
            android:id="@+id/rc_audio_chat"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:stackFromBottom="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_audio_living"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/holo_blue_dark" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_top_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">


        <RelativeLayout
            android:id="@+id/rl_left_top_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/llayout_guest_tools">

            <org.anyrtc.widgets.DiffuseView
                android:id="@+id/wl_content"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                app:diffuse_color="@color/colorAccent"
                app:diffuse_coreColor="@color/colorPrimaryDark"
                app:diffuse_coreImage="@drawable/ic_launcher"
                app:diffuse_coreRadius="50"
                app:diffuse_maxWidth="50"
                app:diffuse_width="12" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/wl_content"
                android:gravity="left"
                android:maxLines="1"
                android:padding="15dp"
                android:text="@string/main_title"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/item_white" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llayout_guest_tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_copy_hls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnBtnClicked"
                android:text="@string/str_live_share" />

            <Button
                android:id="@+id/btn_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnBtnClicked"
                android:text="@string/str_connect_hoster" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/llayout_guest_tools"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_watcher_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@android:color/holo_blue_dark" />

            <org.anyrtc.widgets.HorizontalListView
            android:id="@+id/rc_audio_chat_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:id="@+id/space_chat_list_right"
            android:layout_width="72dp"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="56.0dip"
            android:layout_marginLeft="4.0dip"
            android:background="#FFB5C5" />

        <FrameLayout
            android:id="@+id/fl_chat_list"
            android:layout_width="fill_parent"
            android:layout_height="300.0dip"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="56.0dip"
            android:layout_marginLeft="4.0dip"
            android:layout_toLeftOf="@id/space_chat_list_right"
            android:gravity="bottom">

            <include layout="@layout/layout_live_chat_list" />
        </FrameLayout>

        <ViewAnimator
            android:id="@+id/va_bottom_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="6.0dip">

            <ViewAnimator
                android:id="@+id/va_controls"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:measureAllChildren="false"
                android:padding="5.0dip">


                <org.anyrtc.widgets.BottomControl

                    android:id="@+id/ll_host_audience_controls"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:baselineAligned="false"
                    android:gravity="bottom"
                    android:paddingBottom="5.0dip">


                    <ImageView
                        android:id="@+id/iv_host_text"
                        style="@style/style_live_ibtn_controls"
                        android:onClick="OnBtnClicked"
                        android:src="@drawable/selector_btn_chat" />


                </org.anyrtc.widgets.BottomControl>

            </ViewAnimator>

            <include layout="@layout/layout_live_input" />

        </ViewAnimator>
    </RelativeLayout>
</RelativeLayout>
